# Jalanlytics

./: .gitignore  AGENT_INSTRUCTIONS.md  README.md  pyproject.toml  requirements.txt
sample_data/: .gitkeep
src/: __init__.py  config.py  main.py  pipeline.py
src/classification/: __init__.py  base.py  classifier.py  clip_classifier.py
src/data/: __init__.py  prices.py  vehicle_prices.yaml
src/detection/: __init__.py  commercial.py  detector.py
src/report/: __init__.py  generator.py
src/tracking/: __init__.py  tracker.py
src/video/: __init__.py  processor.py
tests/: __init__.py
